# qiskit-migration-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.sandbox  Dockerfile.sandbox-legacy  Dockerfile.ui  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
deploy/huggingface/: DEPLOY.md  README.md  app.py  requirements.txt
docs/: HANDOFF.md  PUBLISHING.md
examples/: README.md
examples/01_opflow_vqe/: legacy.py  migrated.py
examples/02_aqua_qsvm/: legacy.py  migrated.py
examples/03_primitives_v1_to_v2/: legacy.py  migrated.py
examples/04_fake_provider_backendv2/: legacy.py  migrated.py
examples/05_ansatz_classes_to_functions/: legacy.py  migrated.py
qiskit_migration/: cache.py  config.py  embeddings.py
qiskit_migration/api/: main.py
qiskit_migration/app/web/: styles.css
qiskit_migration/db/: db.py
qiskit_migration/eval/: metrics.py  run_eval.py
qiskit_migration/generation/: generate.py
qiskit_migration/ingestion/: chunking.py  indexer.py
qiskit_migration/migration/: cli.py  deprecations.py  equivalence.py  harvest.py  models.py  replacements.py  report.py  retrieval.py  runtime_deprecations.py  sandbox.py  transform.py  validate_input.py  validate_output.py  verify_record.py
qiskit_migration/migration/data/: known_deprecations.json
qiskit_migration/retrieval/: search.py
qiskit_migration/tests/: test_adversarial_eval.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_deprecations.py  test_equivalence.py  test_eval.py  test_generate.py  test_harvest.py  test_jobstore.py  test_loader_metadata.py  test_replacements.py  test_report.py  test_runtime_deprecations.py  test_sandbox.py  test_symbols.py  test_transform.py  test_validate_input.py  test_validate_output.py  test_verify_record.py
qiskit_migration/worker/: queue.py  run.py  tasks.py
scripts/: capture_screenshots.py  manual_search.py  run_ingestion.py
src/: cache.py  config.py  embeddings.py  observability.py
src/api/: main.py
src/app/: chatbot.py
src/app/web/: app.js  index.html
src/db/: db.py
src/eval/: metrics.py  run_eval.py
src/eval/dataset/: adversarial.py  golden.py
src/generation/: generate.py
src/ingestion/: chunking.py  indexer.py  loader.py
src/migration/: cli.py  deprecations.py  equivalence.py  harvest.py  models.py  replacements.py  report.py  retrieval.py  runtime_deprecations.py  sandbox.py  symbols.py  transform.py  validate_input.py  validate_output.py  verify_record.py
src/migration/data/: harvested_deprecations.json  known_deprecations.json
src/retrieval/: search.py
src/tests/: test_adversarial_eval.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_deprecations.py  test_equivalence.py  test_eval.py  test_generate.py  test_harvest.py  test_jobstore.py  test_loader_metadata.py  test_replacements.py  test_report.py  test_runtime_deprecations.py  test_sandbox.py  test_symbols.py  test_transform.py  test_validate_input.py  test_validate_output.py  test_verify_record.py
src/worker/: queue.py  run.py  tasks.py
