[project]
name = "qiskit-migration-assistant"
version = "0.1.0"
description = "Production-grade RAG assistant that ports Qiskit code from older versions to the latest (2.x)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  # --- config & utils ---
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
  # --- retrieval / embeddings / vector store ---
  "cohere>=5.5",
  "pinecone>=5.0",
  # --- ingestion / chunking ---
  "langchain-text-splitters>=0.2",
  # --- generation (pluggable LLM providers: gemini | ollama | anthropic) ---
  "langchain-core>=0.2",
  "langchain-google-genai>=1.0",
  "langchain-ollama>=0.2",
  "anthropic>=0.39",
  # --- api + async worker ---
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "rq>=1.16",
  "redis>=5.0",
  # --- persistence ---
  "SQLAlchemy>=2.0",
  # --- ui ---
  "streamlit>=1.36",
  # --- observability ---
  "prometheus-client>=0.20",
  "langsmith>=0.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
# Local embedding stack (EMBEDDING_PROVIDER=local). For CUDA, install torch from
# the PyTorch index, e.g. `pip install torch --index-url https://download.pytorch.org/whl/cu126`.
local = ["sentence-transformers>=3.0", "torch>=2.2"]
# Postgres driver for the worker/jobs DB in production (SQLite is used locally).
postgres = ["psycopg[binary]>=3.1"]
# RAG evaluation harness (heavy; only needed to run `make eval`).
eval = ["ragas>=0.1.7", "datasets>=2.19"]
# Knowledge harvester (src/migration/harvest.py): Griffe API-diff between Qiskit versions.
harvest = ["griffe>=1.0"]
# Local dev tooling.
dev = [
  "pytest>=8.2",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
# Repo root on the path so `import src.*` works; only collect the real unit tests.
pythonpath = ["."]
testpaths = ["src/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom legitimately calls Depends() in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
