[project]
name = "qiskit-migration-assistant"
version = "0.1.0"
description = "Production-grade RAG assistant that ports Qiskit code from older versions to the latest (2.x)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ziad" }]
keywords = ["qiskit", "migration", "quantum-computing", "rag", "code-migration", "deprecation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  # --- config & utils ---
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
  # --- retrieval / embeddings / vector store ---
  "cohere>=5.5",
  "pinecone>=5.0",
  # --- ingestion / chunking ---
  "langchain-text-splitters>=0.2",
  # --- generation (pluggable LLM providers: gemini | ollama | anthropic | openai-compatible) ---
  "langchain-core>=0.2",
  "langchain-google-genai>=1.0",
  "langchain-ollama>=0.2",
  "langchain-openai>=0.2",  # any OpenAI-compatible endpoint: Groq | OpenRouter | Cerebras | GitHub Models
  "anthropic>=0.39",
  # --- api + async worker ---
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "rq>=1.16",
  "redis>=5.0",
  # --- persistence ---
  "SQLAlchemy>=2.0",
  # --- ui ---
  "streamlit>=1.36",
  # --- observability ---
  "prometheus-client>=0.20",
  "langsmith>=0.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
# Local embedding stack (EMBEDDING_PROVIDER=local). For CUDA, install torch from
# the PyTorch index, e.g. `pip install torch --index-url https://download.pytorch.org/whl/cu126`.
local = ["sentence-transformers>=3.0", "torch>=2.2"]
# Postgres driver for the worker/jobs DB in production (SQLite is used locally).
postgres = ["psycopg[binary]>=3.1"]
# RAG evaluation harness (heavy; only needed to run `make eval`).
eval = ["ragas>=0.1.7", "datasets>=2.19"]
# Knowledge harvester (qiskit_migration/migration/harvest.py + replacements.py): Griffe API-diff between
# Qiskit versions, plus the community flake8 migration map for replacement hypotheses.
harvest = ["griffe>=1.0", "flake8-qiskit-migration>=0.4"]
# Local dev tooling.
dev = [
  "pytest>=8.2",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Ziadt160/qiskit-migration-assistant"
Repository = "https://github.com/Ziadt160/qiskit-migration-assistant"
Issues = "https://github.com/Ziadt160/qiskit-migration-assistant/issues"

[project.scripts]
qiskit-migrate = "qiskit_migration.migration.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qiskit_migration*"]

[tool.setuptools.package-data]
# Ship the deprecation knowledge (curated seed + harvested tier) inside the wheel so an
# installed copy (PyPI / pip-from-git / the hosted demo) can load it without the repo tree.
"qiskit_migration.migration" = ["data/*.json"]

[tool.pytest.ini_options]
# Repo root on the path so `import qiskit_migration.*` works; only collect the real unit tests.
pythonpath = ["."]
testpaths = ["qiskit_migration/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
# Illustrative migration snippets (intentionally partial; not standalone-runnable).
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom legitimately calls Depends() in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
